# number-recognizing-network

./: .gitignore  CMakeLists.txt  environment.yml  mnist-cnn-fit.ipynb  requirements.txt
fitted_models/: mnist_2conv_2dens_5_aug-all.h5  mnist_2conv_2dens_5_default.h5  mnist_underfitted_0,03_0,74.h5  mnist_underfitted_0,05_0,94.h5
prefitted_models/: mnist_underfitted_0,01_0,45.h5
pythonsrc/neural_network/: .gitignore  layers.py  network.py
pythonsrc/number_recognizing_network/: main.py
pythonsrc/screen/: screen.py
src/: main.cpp  main.py  screen.py
src/neural_network/: activations.py  layers.cpp  layers.hpp  layers.py  network.cpp  network.hpp  network.py  utils.py
src/number_recognizing_network/: main.py
src/screen/: screen.cpp  screen.hpp  screen.py
